--- a/index.html
+++ b/index.html
@@ -141,49 +141,49 @@
             <h2 class="advantages__title title">Преимущества</h2>
             <ul class="advantages__inner">
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-1.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_1.svg" alt="Icon">
                   <div class="advantages__text">
                      Идейные соображения высшего порядка, а также постоянный количественный рост
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-2.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_2.svg" alt="Icon">
                   <div class="advantages__text">
                      Значимость этих проблем настолько очевидна, что вопрос остается открытым
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-3.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_3.svg" alt="Icon">
                   <div class="advantages__text">
                      Таким образом реализация плановых заданий играет важную роль для понимания
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-4.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_4.svg" alt="Icon">
                   <div class="advantages__text">
                      Повседневная практика показывает, что сложившаяся структура организации
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-5.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_5.svg" alt="Icon">
                   <div class="advantages__text">
                      Равным образом рамки и место обучения кадров способствует подготовки сотрудника
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-6.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_6.svg" alt="Icon">
                   <div class="advantages__text">
                      Консультация с активом влечет за собой процесс внедрения услуг нашего сервиса
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-7.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_7.svg" alt="Icon">
                   <div class="advantages__text">
                      Повседневная практика показывает, что дальнейшее развитие различных форм
                   </div>
                </li>
                <li class="advantages__item">
-                  <img class="advantages__icon" src="img/icon-8.png" alt="Icon">
+                  <img class="advantages__icon" src="img/icon_8.svg" alt="Icon">
                   <div class="advantages__text">
                      Значимость этого настолько очевидна, что консультация наших экспертов помогает
                   </div>
