доработан согласно 7 модулю

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
          <nav class="menu">
             <ul class="menu__list">
                <li class="menu__item">
-                  <a class="menu__item-link" href="#">О нас</a>
+                  <a class="menu__item-link" href="#about">О нас</a>
                </li>
                <li class="menu__item">
-                  <a class="menu__item-link" href="#">Услуги</a>
+                  <a class="menu__item-link" href="#services">Услуги</a>
                </li>
                <li class="menu__item">
-                  <a class="menu__item-link" href="#">Преимущества</a>
+                  <a class="menu__item-link" href="#advantages">Преимущества</a>
                </li>
                <li class="menu__item">
-                  <a class="menu__item-link" href="#">Размещение</a>
+                  <a class="menu__item-link" href="#accommodation">Размещение</a>
                </li>
                <li class="menu__item">
                   <a class="menu__item-link" href="#">Блог</a>
                </li>
                <li class="menu__item">
-                  <a class="menu__item-link" href="#">Контакты</a>
+                  <a class="menu__item-link" href="#contacts">Контакты</a>
                </li>
             </ul>
             <input class="menu__input" type="text" placeholder="Поиск">
@@ -88,7 +88,7 @@
                      <div class="offer__info">
                         <h3 class="offer__title">Номера категории люкс</h3>
                         <span class="offer__price">от 5 000 р</span>
-                        <a href="#" class="offer__link">Подробнее</a>
+                        <a class="offer__link" href="#">Подробнее</a>
                      </div>
                   </div>
                </div>
@@ -96,7 +96,7 @@
          </div>
       </section>
       <!-- О НАС=========================== -->
-      <section class="about">
+      <section class="about" id="about">
          <div class="container">
             <h3 class="about__tiile title">О Нас</h3>
             <p class="about__text">
@@ -110,7 +110,7 @@
          </div>
       </section>
       <!-- УСЛУГИ========================== -->
-      <section class="services">
+      <section class="services" id="services">
          <div class="container">
             <h3 class="services__title title">Услуги</h3>
             <ul class="services__inner">
@@ -146,7 +146,7 @@
          </div>
       </section>
       <!-- ПРЕИМУЩЕСТВА==================== -->
-      <section class="advantages">
+      <section class="advantages" id="advantages">
          <div class="container">
             <h3 class="advantages__title title">Преимущества</h3>
             <ul class="advantages__inner">
@@ -202,7 +202,7 @@
          </div>
       </section>
       <!-- РАЗМЕЩЕНИЕ====================== -->
-      <section class="accommodation">
+      <section class="accommodation" id="accommodation">
          <div class="container">
             <h3 class="accommodation__title title">Размещение</h3>
             <ul class="accommodation__inner">
@@ -374,7 +374,7 @@
          </div>
       </section>
       <!-- КОНТАКТЫ======================== -->
-      <section class="contacts">
+      <section class="contacts" id="contacts">
          <div class="container">
             <div class="contacts__inner">
                <div class="contacts__item">
