доработал плейсхолдер в форме блока Размещение

--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
                         <option value="Люкс">Люкс</option>
                      </select>
                      <!-- <input class="form__input" type="text" name="room category" placeholder="Категория номера"> -->
-                     <input class="form__input date" type="date" required name="date" placeholder="Дата заселения">
+                     <input class="form__input date" type="text" onfocus="(this.type='date')" required name="date"
+                        placeholder="Дата заселения">
                      <input class="form__input nights" type="number" required name="nights" min="1" max="21"
                         placeholder="Количество ночей">
-                     <input class="form__input" type="number" required name="guests" min="1" max="7"
+                     <input class="form__input guests" type="number" required name="guests" min="1" max="7"
                         placeholder="Количество гостей">
                      <div class="wrapper">
                         <button class="reservation__btn" type="submit">Найти номер</button>
